--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 
 #first db
-spring.firstDatasource.url=jdbc:sqlserver://localhost;databaseName=BRAC_KEY_GENERATOR_API
-spring.firstDatasource.username=sa
-spring.firstDatasource.password=123
-spring.firstDatasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.firstdatasource.url=jdbc:sqlserver://localhost;databaseName=BRAC_KEY_GENERATOR_API
+spring.firstdatasource.username=sa
+spring.firstdatasource.password=123
+spring.firstdatasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 #second db ...
-spring.secondDatasource.url = jdbc:oracle:thin:@//192.168.10.196:1521/RNDDB
-spring.secondDatasource.username = rnddb
-spring.secondDatasource.password = rndtest196
-spring.secondDatasource.driverClassName = oracle.jdbc.OracleDriver
+spring.seconddatasource.url = jdbc:oracle:thin:@//192.168.10.196:1521/RNDDB
+spring.seconddatasource.username = rnddb
+spring.seconddatasource.password = rndtest196
+spring.seconddatasource.driverClassName = oracle.jdbc.OracleDriver
