--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 
 #first db
-spring.firstdatasource.url=jdbc:sqlserver://localhost;databaseName=BRAC_KEY_GENERATOR_API
-spring.firstdatasource.username=sa
-spring.firstdatasource.password=123
-spring.firstdatasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=BRAC_KEY_GENERATOR_API
+spring.datasource.username=sa
+spring.datasource.password=123
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 #second db ...
-spring.seconddatasource.url = jdbc:oracle:thin:@//192.168.10.196:1521/RNDDB
-spring.seconddatasource.username = rnddb
-spring.seconddatasource.password = rndtest196
-spring.seconddatasource.driverClassName = oracle.jdbc.OracleDriver
+second.datasource.url = jdbc:oracle:thin:@//192.168.10.196:1521/RNDDB
+second.datasource.username = rnddb
+second.datasource.password = rndtest196
+second.datasource.driverClassName = oracle.jdbc.OracleDriver
